# 03-enterprise-meeting-formatter

./: .gitignore  ATTENDEES_CHECK_REPORT.md  CLAUDE.md  EXAMPLES_UPDATE.md  OPTIMIZATION_REPORT.md  PROGRESS.md  README.md  SKILLS_IMPLEMENTATION.md  SKILLS_TEST_REPORT.md  YAML_FRONT_MATTER_GUIDE.md  enhanced_converter.py  requirements.txt  run.py
.tmp-docs/: agent-skills-overview.html  skills.html  skills2.html  tool-use.html  tools.html
legacy/: RB99125046安全运算与控制平台（VCU）项目例会会议纪要_20250912.md  RB99125046安全运算与控制平台（VCU）项目例会会议纪要_20250919.md  RB99125046安全运算与控制平台（VCU）项目例会会议纪要_20251010.md  RB99125046安全运算与控制平台（VCU）项目例会会议纪要_20251024.md  RB99125046安全运算与控制平台（VCU）项目例会会议纪要_20251121.md  RB99125046安全运算与控制平台（VCU）项目例会会议纪要_[time].md  RB99125046安全运算与控制平台（VCU）项目例会会议纪要_优化版_[time].md  会议纪要模版_优化版.md
legacy/backups/: ocr-meeting-extractor.py.backup
legacy/test-outputs/: RB99125046安全运算与控制平台(VCU)项目例会会议纪要_20251114.md  RB99125046安全运算与控制平台（VCU）项目例会会议纪要_20251114.md
pypi-package/: LICENSE  README.md  pyproject.toml  requirements.txt
pypi-package/src/md2pdf_enterprise/: __init__.py  __main__.py  app.py  cli.py
pypi-package/src/md2pdf_enterprise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pypi-package/src/md2pdf_enterprise/converter/: __init__.py  converter_factory.py  pdf_converter.py
pypi-package/src/md2pdf_enterprise/core/: __init__.py  config_manager.py  converter_base.py  exceptions.py  theme_manager.py
pypi-package/src/md2pdf_enterprise/themes/: enterprise.css  github.css
pypi-package/src/md2pdf_enterprise/utils/: __init__.py  autocomplete.py  cli_formatter.py  dependency_checker.py  file_scanner.py  theme_selector.py
pypi-package/tests/: test_exceptions.py  test_pdf_converter.py  test_theme_manager.py
pypi-package/tests/fixtures/: sample.md
skill-package/markdown-pdf-converter/: README.md  SKILL.md  SKILL.yaml  create_test_image.py  test_attendees.txt  test_meeting_content.txt  使用说明.md
skill-package/markdown-pdf-converter/data/: attendees.yaml  (+4 more)
work-summaries/: README.md
work-summaries/annual/: 2024年度工作总结_刘浩洋.md  README.md
(+23 files in other folders)
