[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2pdf-enterprise"
version = "2.0.0"
description = "高质量 Markdown 到 PDF 转换工具，支持企业级样式和多主题"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Claude Code Skills", email = "skills@claude.ai"}
]
keywords = ["markdown", "pdf", "converter", "documentation", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "pyppeteer>=1.0.2",
    "markdown>=3.4.0",
    "pygments>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "build>=0.10",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/claude-skills/md2pdf-enterprise"
Documentation = "https://github.com/claude-skills/md2pdf-enterprise#readme"
Repository = "https://github.com/claude-skills/md2pdf-enterprise"
Issues = "https://github.com/claude-skills/md2pdf-enterprise/issues"

[project.scripts]
md2pdf = "md2pdf_enterprise.cli:main"
md2pdf-enterprise = "md2pdf_enterprise.cli:main"

[tool.setuptools]
packages = ["md2pdf_enterprise"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
